Updated samples and layouts

--- a/src/LoggingDemo/Views/Home/Index.cshtml
+++ b/src/LoggingDemo/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">But! It was Logged!</h1>
+    <p>A sample project designed to work along-side the presentation given by Mitchel Sellers.</p>
+    <p><strong>NOTE</strong> Some anti-patterns are discussed in this sample and should NOT be replicated in production code!</p>
 </div>
+
+<h3>Supporting Presentation</h3>
+<p>You can download the <a href="https://github.com/mitchelsellers/dotnetcoreloggingdemo/tree/master/Presentation">PowerPoint Presentation</a> that goes with this project for additional information.</p>
