--- a/src/LoggingDemo/Views/Shared/_Layout.cshtml
+++ b/src/LoggingDemo/Views/Shared/_Layout.cshtml
@@ -33,7 +33,22 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="TriggerWarning">
+                                Trigger Warning
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="EntityFramework">
+                                EF Core
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="ComplexLogging">
+                                Complex Logging
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy/Security Considerations</a>
                         </li>
                     </ul>
                 </div>
@@ -49,7 +64,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - LoggingDemo - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - ASP.NET Logging Demo - Created by <a href="https://www.github.com/mitchelsellers">Mitchel Sellers</a>
         </div>
     </footer>
 
@@ -73,6 +88,7 @@
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
-    @RenderSection("Scripts", required: false)
+    @await RenderSectionAsync("Scripts", required: false)
+
 </body>
 </html>
